syntax = "proto3";

package go.micro.service.userservice;

service UserService {
  rpc Create(User) returns (AuthResponse) {}
  rpc GetProfile(EmptyRequest) returns (AuthResponse) {}
  rpc Authenticate(User) returns (AuthResponse) {}
  rpc ValidateToken(Token) returns (TokenValidationResponse) {}
}

message User {
  string id = 1;
  string name = 2;
  string company = 3;
  string email = 4;
  string password = 5;
}

message EmptyRequest {};

message AuthResponse {
  User user = 1;
  Token token = 2;
}

message TokenValidationResponse {
  bool valid = 1;
}

message Token {
  string token = 1;
}